United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6896624 G1: hotspot:::gc and hotspot:::mem-pool-gc probes are not fired
6896624 : G1: hotspot:::gc and hotspot:::mem-pool-gc probes are not fired

Details
Type:
Bug
Submit Date:
2009-10-30
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
solaris
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs14
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:
Relates:
Relates:

Sub Tasks

Description
The following probes are not fired in case G1 is used:
 hotspot:::gc-begin
 hotspot:::gc-end
 hotspot:::mem-pool-gc-begin
 hotspot:::mem-pool-gc-end

The probes are not fired for both client and server compiler, on all solaris platforms.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/7c5250dbd584
                                     
2010-12-20
EVALUATION

The reason for the missing hotspot:::gc probes is that we don't call VM_GC_Operation::notify_gc_begin() / notify_gc_end() methods from the G1 VM operations.

Looking at the memory poo probes next.
                                     
2010-12-17
EVALUATION

The memory pool probes are fired by G1. Most likely the introduction of the G1 memory pools as part of 6941275: G1: The MemoryPools are incorrectly supported for G1 ensured that. So, we only seem to be missing the gc-begin / gc-end probes.
                                     
2010-12-17
SUGGESTED FIX

Call notify_gc_begin() / notify_gc_end() from the G1 VM Operations.
                                     
2010-12-17
SUGGESTED FIX

Additional note: in a departure from what's done before I'm going to call the probes from the methods that actually do the collection, not the VM operations that schedule the collection, given that the former is a more reliable way to ensure that when a probe fires the collection will indeed happen (i.e., a VM operation that's supposed to do a collection might not if say the GC locker is active).
                                     
2010-12-17



Hardware and Software, Engineered to Work Together