6896624: G1: hotspot:::gc and hotspot:::mem-pool-gc probes are not fired

Fire the gc-begin and gc-end probes for G1.

Reviewed-by: kamg, ysr, jcoomes